// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Entity Usage render for connector data with gitSync 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main container standard secondHeader StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <h2
        class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-weight-bold"
        level="2"
      >
        common.references
      </h2>
    </div>
    <div
      class="StyledProps--font StyledProps--main"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
      >
        <div
          class="bp3-input-group ui-search-box ExpandingSearchInput--main search "
          data-name=""
        >
          <span
            class="bp3-icon StyledProps--main ExpandingSearchInput--icon "
            data-icon="thinner-search"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 16 16"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </span>
          <input
            class="bp3-input  ExpandingSearchInput--filter"
            dir="auto"
            placeholder="Search"
            style="padding-right: 0px;"
            type="search"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main pageBody"
    data-name="page-body"
  >
    <div
      class="table table"
    >
      <div
        class="header"
        role="row"
      >
        <div
          class="cell"
          colspan="1"
          role="columnheader"
          style="width: 30%;"
        >
          entity
        </div>
        <div
          class="cell"
          colspan="1"
          role="columnheader"
          style="width: 50%;"
        >
          COMMON.GITSYNC.REPODETAILS
        </div>
        <div
          class="cell"
          colspan="1"
          role="columnheader"
          style="width: 20%;"
        >
          details
        </div>
      </div>
      <div
        class="body"
      >
        <div
          class="row card"
          role="row"
        >
          <div
            class="cell"
            role="cell"
            style="width: 30%;"
          >
            <div
              class="Layout--vertical StyledProps--main"
            >
              <div
                class="Layout--horizontal StyledProps--main"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main overflow StyledProps--color StyledProps--color-black"
                  style="--text-line-clamp: 1;"
                >
                  test2
                </p>
              </div>
              <p
                class="StyledProps--font Text--lineclamp StyledProps--main overflow StyledProps--color StyledProps--color-grey400"
                style="--text-line-clamp: 1;"
              >
                Pipelines
              </p>
            </div>
          </div>
          <div
            class="cell"
            role="cell"
            style="width: 50%;"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-grey600"
                data-icon="repository"
              >
                <svg
                  height="16"
                  viewBox="0 0 13 14"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.438 2.452l-.006-.017a.367.367 0 00-.067-.114l-.004-.007L10.409.125a.374.374 0 00-.28-.125H2.327a.376.376 0 00-.28.125L.095 2.314l-.005.008a.374.374 0 00-.066.113l-.006.017a.37.37 0 00-.018.11v11.064c0 .206.168.374.374.374h11.707a.375.375 0 00.375-.374V2.563a.369.369 0 00-.018-.111zm-7.91 7.86h3.4v.357a.318.318 0 01-.318.318H4.846a.318.318 0 01-.318-.318v-.357zM.75 9.563V6.625h3.03v.357c0 .588.479 1.066 1.067 1.066H7.61c.588 0 1.066-.478 1.066-1.066v-.357h3.03v2.938H.75zm3.03-6.626v.357c0 .588.479 1.067 1.067 1.067H7.61c.589 0 1.067-.479 1.067-1.067v-.357h3.03v2.939H.75V2.937h3.03zm4.15 0v.357a.318.318 0 01-.318.318H4.846a.318.318 0 01-.318-.318v-.357h3.4zm-3.4 3.688h3.4v.357a.318.318 0 01-.319.317H4.846a.317.317 0 01-.318-.317v-.357zM2.493.749h7.468l1.284 1.44H1.21L2.494.748zm9.213 12.502H.75v-2.939h3.03v.357c0 .589.479 1.067 1.067 1.067H7.61c.588 0 1.066-.478 1.066-1.067v-.357h3.03v2.94z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              <p
                class="StyledProps--font StyledProps--main gitText StyledProps--margin-right-medium"
              >
                secondRepo
              </p>
              <span
                class="bp3-icon StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-grey600"
                data-icon="git-new-branch"
              >
                <svg
                  height="14"
                  viewBox="0 0 13 16"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M10.406.003a2.399 2.399 0 00-.8 4.658v.94a.8.8 0 01-.8.8H4.001a2.413 2.413 0 00-.8.14V4.66A2.399 2.399 0 002.402 0a2.399 2.399 0 00-.8 4.661v6.678a2.399 2.399 0 00.8 4.661 2.399 2.399 0 00.8-4.661v-2.54a.8.8 0 01.8-.799h4.803a2.4 2.4 0 002.402-2.4v-.939a2.399 2.399 0 00-.8-4.658z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              <p
                class="StyledProps--font StyledProps--main gitText"
              >
                gitSync
              </p>
            </div>
          </div>
          <div
            class="cell"
            role="cell"
            style="width: 20%;"
          />
        </div>
        <div
          class="row card"
          role="row"
        >
          <div
            class="cell"
            role="cell"
            style="width: 30%;"
          >
            <div
              class="Layout--vertical StyledProps--main"
            >
              <div
                class="Layout--horizontal StyledProps--main"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main overflow StyledProps--color StyledProps--color-black"
                  style="--text-line-clamp: 1;"
                >
                  test
                </p>
              </div>
              <p
                class="StyledProps--font Text--lineclamp StyledProps--main overflow StyledProps--color StyledProps--color-grey400"
                style="--text-line-clamp: 1;"
              >
                Pipelines
              </p>
            </div>
          </div>
          <div
            class="cell"
            role="cell"
            style="width: 50%;"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-grey600"
                data-icon="repository"
              >
                <svg
                  height="16"
                  viewBox="0 0 13 14"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.438 2.452l-.006-.017a.367.367 0 00-.067-.114l-.004-.007L10.409.125a.374.374 0 00-.28-.125H2.327a.376.376 0 00-.28.125L.095 2.314l-.005.008a.374.374 0 00-.066.113l-.006.017a.37.37 0 00-.018.11v11.064c0 .206.168.374.374.374h11.707a.375.375 0 00.375-.374V2.563a.369.369 0 00-.018-.111zm-7.91 7.86h3.4v.357a.318.318 0 01-.318.318H4.846a.318.318 0 01-.318-.318v-.357zM.75 9.563V6.625h3.03v.357c0 .588.479 1.066 1.067 1.066H7.61c.588 0 1.066-.478 1.066-1.066v-.357h3.03v2.938H.75zm3.03-6.626v.357c0 .588.479 1.067 1.067 1.067H7.61c.589 0 1.067-.479 1.067-1.067v-.357h3.03v2.939H.75V2.937h3.03zm4.15 0v.357a.318.318 0 01-.318.318H4.846a.318.318 0 01-.318-.318v-.357h3.4zm-3.4 3.688h3.4v.357a.318.318 0 01-.319.317H4.846a.317.317 0 01-.318-.317v-.357zM2.493.749h7.468l1.284 1.44H1.21L2.494.748zm9.213 12.502H.75v-2.939h3.03v.357c0 .589.479 1.067 1.067 1.067H7.61c.588 0 1.066-.478 1.066-1.067v-.357h3.03v2.94z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              <p
                class="StyledProps--font StyledProps--main gitText StyledProps--margin-right-medium"
              >
                firstRepo
              </p>
              <span
                class="bp3-icon StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-grey600"
                data-icon="git-new-branch"
              >
                <svg
                  height="14"
                  viewBox="0 0 13 16"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M10.406.003a2.399 2.399 0 00-.8 4.658v.94a.8.8 0 01-.8.8H4.001a2.413 2.413 0 00-.8.14V4.66A2.399 2.399 0 002.402 0a2.399 2.399 0 00-.8 4.661v6.678a2.399 2.399 0 00.8 4.661 2.399 2.399 0 00.8-4.661v-2.54a.8.8 0 01.8-.799h4.803a2.4 2.4 0 002.402-2.4v-.939a2.399 2.399 0 00-.8-4.658z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              <p
                class="StyledProps--font StyledProps--main gitText"
              >
                master
              </p>
            </div>
          </div>
          <div
            class="cell"
            role="cell"
            style="width: 20%;"
          />
        </div>
      </div>
      <div
        class="Layout--horizontal StyledProps--main Pagination--container StyledProps--padding-top-medium StyledProps--padding-bottom-medium StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-distribution-space-between"
      >
        <span
          class="StyledProps--font StyledProps--main Pagination--text StyledProps--inline"
        >
          Showing 
          <strong>
            2
          </strong>
           of 
          <strong>
            2
          </strong>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Entity Usage render for data 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main container standard secondHeader StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <h2
        class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-weight-bold"
        level="2"
      >
        common.references
      </h2>
    </div>
    <div
      class="StyledProps--font StyledProps--main"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
      >
        <div
          class="bp3-input-group ui-search-box ExpandingSearchInput--main search "
          data-name=""
        >
          <span
            class="bp3-icon StyledProps--main ExpandingSearchInput--icon "
            data-icon="thinner-search"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 16 16"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </span>
          <input
            class="bp3-input  ExpandingSearchInput--filter"
            dir="auto"
            placeholder="Search"
            style="padding-right: 0px;"
            type="search"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main pageBody"
    data-name="page-body"
  >
    <div
      class="table table"
    >
      <div
        class="header"
        role="row"
      >
        <div
          class="cell"
          colspan="1"
          role="columnheader"
          style="width: 50%;"
        >
          entity
        </div>
        <div
          class="cell"
          colspan="1"
          role="columnheader"
          style="width: 50%;"
        >
          details
        </div>
      </div>
      <div
        class="body"
      >
        <div
          class="row card"
          role="row"
        >
          <div
            class="cell"
            role="cell"
            style="width: 50%;"
          >
            <div
              class="Layout--vertical StyledProps--main"
            >
              <div
                class="Layout--horizontal StyledProps--main"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main overflow StyledProps--color StyledProps--color-black"
                  style="--text-line-clamp: 1;"
                >
                  Harness Docker Connector
                </p>
              </div>
              <p
                class="StyledProps--font Text--lineclamp StyledProps--main overflow StyledProps--color StyledProps--color-grey400"
                style="--text-line-clamp: 1;"
              >
                Connectors
              </p>
            </div>
          </div>
          <div
            class="cell"
            role="cell"
            style="width: 50%;"
          />
        </div>
      </div>
      <div
        class="Layout--horizontal StyledProps--main Pagination--container StyledProps--padding-top-medium StyledProps--padding-bottom-medium StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-distribution-space-between"
      >
        <span
          class="StyledProps--font StyledProps--main Pagination--text StyledProps--inline"
        >
          Showing 
          <strong>
            1
          </strong>
           of 
          <strong>
            1
          </strong>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Entity Usage render for no data 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main container standard secondHeader StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <h2
        class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-weight-bold"
        level="2"
      >
        common.references
      </h2>
    </div>
    <div
      class="StyledProps--font StyledProps--main"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
      >
        <div
          class="bp3-input-group ui-search-box ExpandingSearchInput--main search "
          data-name=""
        >
          <span
            class="bp3-icon StyledProps--main ExpandingSearchInput--icon "
            data-icon="thinner-search"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 16 16"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </span>
          <input
            class="bp3-input  ExpandingSearchInput--filter"
            dir="auto"
            placeholder="Search"
            style="padding-right: 0px;"
            type="search"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main pageBody"
    data-name="page-body"
  >
    <div
      class="StyledProps--font StyledProps--main noDataCard StyledProps--flex StyledProps--flex-align-center-center"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
        style="align-items: center; margin-top: -48px; width: 470px;"
      >
        <span
          class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
          data-icon="nav-project"
        >
          <svg
            height="48"
            viewBox="0 0 22 22"
            width="48"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.1 4.583L11 0l9.9 4.583v12.834L11 22l-9.9-4.583zm9 5.171l-7.2-3.33v9.811l7.2 3.338V9.754zm9 6.481V6.424l-7.2 3.33v9.819zm-1.462-11.15L11 2.012 4.362 5.085 11 8.157z"
              fill="#56778d"
            />
          </svg>
        </span>
        <h2
          class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--font-align-center StyledProps--color StyledProps--color-grey500"
          level="2"
        >
          common.noRefData
        </h2>
      </div>
    </div>
  </div>
</div>
`;
